--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
-body{
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;;
     background: black;
 }
 #canvas1{
-    border: 3px solid white;
+    border: 2px solid white;
     top: 50%;
     left: 50%;
     position: absolute;
-    width: 800px;
-    height: 450px;
+    width: 700px;
+    height: 700px;
     transform: translate(-50%, -50%);
 }
